# pytest_matrix

./: .coveragerc  .gitignore  .travis.yml  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.pytest_cache/v/cache/: lastfailed  nodeids
pytest_matrix/: __init__.py  exceptions.py  mixin.py  plugin.py
tests/: test_combcover.py  test_generate.py
