[tool.poetry]
name = "pytest_matrix"
version = "0.7.0"
description = "matrix combinations for pytest fixtures"
authors = ["dburton90 <daniel.barton@seznam.cz>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
pytest-lazy-fixture = "^0.6.3"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
